# tgff

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
benches/: lib.rs
implementors/core/fmt/: trait.Debug.js  trait.Display.js
src/: content.rs  lib.rs
src/tgff/: content.rs.html  lib.rs.html
tests/: lib.rs
tests/fixtures/: 002_040.tgff  002_040.tgffopt
tgff/: fn.parse.html  index.html  sidebar-items.js  struct.Arc.html  struct.Column.html  struct.Content.html  struct.Deadline.html  struct.Error.html  struct.Graph.html  struct.Table.html  struct.Task.html  type.Result.html
tgff/content/: sidebar-items.js  struct.Arc.html  struct.Column.html  struct.Content.html  struct.Deadline.html  struct.Graph.html  struct.Table.html  struct.Task.html
