[package]
name = "tgff"
version = "0.1.8"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/tgff"
homepage = "https://github.com/stainless-steel/tgff"
documentation = "https://stainless-steel.github.io/tgff"
description = "The library provides a parser for the TGFF (Task Graphs For Free) format."

[dev-dependencies]
assert = "0.1"
