[package]
name = "tgff"
version = "0.1.9"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/simulated-reality/tgff"
homepage = "https://github.com/simulated-reality/tgff"
documentation = "https://simulated-reality.github.io/tgff"
description = "The library provides a parser for the TGFF (Task Graphs For Free) format."

[dependencies]
num = "*"

[dev-dependencies]
assert = "*"
