[package]
name = "tgff"
version = "0.1.10"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/tgff"
homepage = "https://github.com/markov-chain/tgff"
documentation = "https://markov-chain.github.io/tgff"
description = "The library provides a parser for the TGFF (Task Graphs For Free) format."

[dev-dependencies]
assert = "*"
